--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <div class="pre-nav py-2 d-flex justify-content-end">
     <div class="pre-nav-text">
       Imate pitanja? Pozovite:
-      <span class="phone"><i class="bi bi-telephone-fill"></i>062/42 15 15</span>
+      <a class="phone" href="tel:+38162421515" aria-label="Pozovite 062 42 15 15">
+        <i class="bi bi-telephone-fill" aria-hidden="true"></i>
+        062/42 15 15
+      </a>
     </div>
   </div>
 
@@ -188,7 +191,7 @@
       <!-- RIGHT: BADGE + COPY + CTAs -->
       <div class="col-12 col-lg-5 mt-3 mt-lg-0">
         <p class="lead text-secondary mb-3 white">
-          Mi preuzimamo ceo proces umesto vas - <strong class="underline">od izrade potrebne dokumentacije do kompletne montaže</strong>. Sve rešavate na jednom mestu!!
+          <strong class="underline">Od izrade potrebne dokumentacije do kompletne montaže</strong>. Mi preuzimamo ceo proces umesto vas - Sve rešavate na jednom mestu!!
         </p>
         <!-- stack on xs, row from sm and up -->
         <div class="d-flex flex-column flex-sm-row gap-2">
@@ -204,6 +207,10 @@
   <div class="clearfix"></div>
 <!-- 3 Cards Section (overlap hero) -->
 <section class="cards-overlap position-relative">
+  <div class="scroll-indicator d-sm-none" title="Skrolujte za više">
+    <i class="bi bi-chevron-compact-down"></i>
+    <span class="visually-hidden">Skrolujte za više sadržaja</span>
+  </div>
   <div class="container">
     <div class="row gap-4 justify-content-center">
       
@@ -433,27 +440,27 @@
         <div class="col-lg-8">
           <div class="row g-4">
             <div class="col-12 col-sm-4">
-              <h6 class="text-white mb-3">Tehnička zaštita</h6>
+              <h6 class="text-white mb-3">Sve za video nadzor</h6>
               <ul class="list-unstyled footer-links">
-                <li><a href="#">Video nadzor</a></li>
-                <li><a href="#">Alarmni sistemi</a></li>
-                <li><a href="#">Kontrola pristupa</a></li>
-                <li><a href="#">Interfoni</a></li>
-                <li><a href="#">Server &amp; mreže</a></li>
+                <li><a href="#">Video nadzor do 500€</a></li>
+                <li><a href="#">Video nadzor do 1000€</a></li>
+                <li><a href="#">Video nadzor za kuću</a></li>
+                <li><a href="#">Video nadzor za poslovni prostor</a></li>
+                <li><a href="#">Video nadzor za dvorište</a></li>
               </ul>
             </div>
             <div class="col-12 col-sm-4">
-              <h6 class="text-white mb-3">Tehnička zaštita</h6>
+              <h6 class="text-white mb-3">Kolona 2</h6>
               <ul class="list-unstyled footer-links">
-                <li><a href="#">Video nadzor</a></li>
-                <li><a href="#">Alarmni sistemi</a></li>
-                <li><a href="#">Kontrola pristupa</a></li>
-                <li><a href="#">Interfoni</a></li>
-                <li><a href="#">Server &amp; mreže</a></li>
+                <li><a href="#">Primer 1</a></li>
+                <li><a href="#">Primer 1</a></li>
+                <li><a href="#">Primer 1</a></li>
+                <li><a href="#">Primer 1</a></li>
+                <li><a href="#">Primer 1</a></li>
               </ul>
             </div>
             <div class="col-12 col-sm-4">
-              <h6 class="text-white mb-3">Kompanija</h6>
+              <h6 class="text-white mb-3">Kontakt</h6>
               <ul class="list-unstyled footer-links">
                 <li><a href="#"> Cara Dušana 150, Nova pazova</a></li>
                 <li><a href="#"> maximus.secure@gmail.com</a></li>
@@ -468,7 +475,15 @@
       <hr class="footer-sep my-4">
       <div class="d-flex flex-column flex-md-row justify-content-between align-items-start gap-2">
         <small class="text-secondary">© 2025 Maximus Security. </small>
-        <small class="text-secondary">sajt test <span class="text-white">Maximus</span></small>
+        <div class="d-flex align-items-center gap-3">
+          <small class="text-secondary mb-0">Zapratite nas</small>
+          <a href="#" class="text-white" aria-label="Instagram" target="_blank" rel="noopener">
+            <i class="bi bi-instagram fs-5"></i>
+          </a>
+          <a href="#" class="text-white" aria-label="Facebook" target="_blank" rel="noopener">
+            <i class="bi bi-facebook fs-5"></i>
+          </a>
+        </div>
       </div><br>
     </div>
   </div>
