--- a/index.html
+++ b/index.html
@@ -59,38 +59,49 @@
 
             <!-- Kontrola prolaza -->
             <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="vrataDrop" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-              Kontrola prolaza
-            </a>
-            
-            <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="vrataDrop">
-              <!-- Metal detektorska vrata -->
-              <li class="dropend">
-              <a class="dropdown-item dropdown-toggle" href="#" id="handHeldSub" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
-                Metal detektorska vrata
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="handHeldSub">
-                <li><a class="dropdown-item" href="#">Modeli MD vrata</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Rentiranje MD vrata </a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Modularna vrata</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Kombinovana vrata / Detekcija temperature </a></li>
-              </ul>
-              </li>
+  <a class="nav-link dropdown-toggle"
+     href="https://google.com/"
+     id="kpDrop"
+     data-bs-toggle="dropdown"
+     data-bs-auto-close="outside"
+     aria-expanded="false">
+    Kontrola prolaza
+  </a>
 
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Rendgen skeneri</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">X-ray skeneri</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Ručni detektori</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Servis KD opreme</a></li>
+  <ul class="dropdown-menu" aria-labelledby="kpDrop">
+    <!-- Mobile-only overview -->
+    <li class="d-xl-none"><a class="dropdown-item" href="/kontrola-prolaza/">Pregled (Kontrola prolaza)</a></li>
+    <li class="d-xl-none"><hr class="dropdown-divider"></li>
 
-            </ul>
-            </li>
+    <!-- Example sub-parent (dropend) -->
+    <li class="dropend">
+      <a class="dropdown-item dropdown-toggle"
+         href="https://google.com/"
+         id="kpMdv"
+         data-bs-toggle="dropdown"
+         data-bs-auto-close="outside"
+         aria-expanded="false">
+        Metal detektorska vrata
+      </a>
+      <ul class="dropdown-menu" aria-labelledby="kpMdv">
+        <li class="d-xl-none"><a class="dropdown-item" href="https://google.com/">Pregled (MD vrata)</a></li>
+        <li class="d-xl-none"><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#">Modeli MD vrata</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#">Rentiranje MD vrata</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#">Modularna vrata</a></li>
+      </ul>
+    </li>
+
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#">Rendgen skeneri</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#">Ručni detektori</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#">Servis KD opreme</a></li>
+  </ul>
+</li>
 
           <!-- Elektro instalacije -->
           <li class="nav-item dropdown">
