--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Profesionalna zaštita, maksimalna sigurnost | Maximus security </title>
+  
+  <meta property="og:title" content="The Fascinating World of Open Graph" />
+  <meta property="og:description" content="Learn how Open Graph meta tags control how your content appears on social media." />
+  <meta property="og:image" content="https://www.example.com/image.jpg" />
+  <meta property="og:url" content="https://www.example.com/article/og-meta-tags" />
+  <meta property="og:type" content="article" />
 
   <!-- Bootstrap 5.3.7 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -49,18 +55,18 @@
         <ul class="navbar-nav align-items-lg-center">
           <!-- Video nadzor -->
           <li class="nav-item">
-            <a class="nav-link" href="#">Video nadzor</a>
+            <a class="nav-link" href="kamere-za-video-nadzor-ugradnja-i-oprema.html">Video nadzor</a>
           </li>
 
           <!-- Alarmni sistemi -->
           <li class="nav-item">
-            <a class="nav-link" href="#">Alarmni sistemi</a>
+            <a class="nav-link" href="Alarmni-sistemi-ugradnja-i-oprema.html">Alarmni sistemi</a>
           </li>
 
             <!-- Kontrola prolaza -->
             <li class="nav-item dropdown">
   <a class="nav-link dropdown-toggle"
-     href="https://google.com/"
+     href="metal-detektori-kontrola-prolaza.html"
      id="kpDrop"
      data-bs-toggle="dropdown"
      data-bs-auto-close="outside"
@@ -70,13 +76,13 @@
 
   <ul class="dropdown-menu" aria-labelledby="kpDrop">
     <!-- Mobile-only overview -->
-    <li class="d-xl-none"><a class="dropdown-item" href="/kontrola-prolaza/">Pregled (Kontrola prolaza)</a></li>
+    <li class="d-xl-none"><a class="dropdown-item" href="metal-detektori-kontrola-prolaza.html">O kontroli prolaza</a></li>
     <li class="d-xl-none"><hr class="dropdown-divider"></li>
 
     <!-- Example sub-parent (dropend) -->
     <li class="dropend">
       <a class="dropdown-item dropdown-toggle"
-         href="https://google.com/"
+         href="kontrola-prolaza/metal-detektorska-vrata.html"
          id="kpMdv"
          data-bs-toggle="dropdown"
          data-bs-auto-close="outside"
@@ -84,92 +90,94 @@
         Metal detektorska vrata
       </a>
       <ul class="dropdown-menu" aria-labelledby="kpMdv">
-        <li class="d-xl-none"><a class="dropdown-item" href="https://google.com/">Pregled (MD vrata)</a></li>
+        <li class="d-xl-none"><a class="dropdown-item" href="kontrola-prolaza/metal-detektorska-vrata.html">Sve o metal detektorskim vratima</a></li>
         <li class="d-xl-none"><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Modeli MD vrata</a></li>
+        <li><a class="dropdown-item" href="kontrola-prolaza/modeli-metal-detektorska-vrata.html">Modeli MD vrata</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Rentiranje MD vrata</a></li>
-        <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Modularna vrata</a></li>
+        <li><a class="dropdown-item" href="kontrola-prolaza/iznajmljivanje-metal-detektorska-vrata.html">Iznajmljivanje MD vrata</a></li>
       </ul>
     </li>
 
     <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Rendgen skeneri</a></li>
+    <li><a class="dropdown-item" href="kontrola-prolaza/rendgen-x-ray-skeneri.html">Rendgen skeneri</a></li>
     <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Ručni detektori</a></li>
+    <li><a class="dropdown-item" href="kontrola-prolaza/rucni-metal-detektori.html">Ručni detektori</a></li>
     <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Servis KD opreme</a></li>
+    <li><a class="dropdown-item" href="kontrola-prolaza/servisiranje-kontradiverziona-oprema-srbija.html">Servis KD opreme</a></li>
   </ul>
 </li>
 
           <!-- Elektro instalacije -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="elektroDrop" data-bs-toggle="dropdown" aria-expanded="false">
-              Elektro instalacije
-            </a>
-            <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="elektroDrop">
-              <li><a class="dropdown-item" href="#">Industrijske</a></li>
+
+             <a class="nav-link dropdown-toggle"
+     href="izrada-elektro-instalacija.html"
+     id="elektroDrop"
+     data-bs-toggle="dropdown"
+     data-bs-auto-close="outside"
+     aria-expanded="false">
+    Elektro instalacije
+  </a>
+
+  <ul class="dropdown-menu" aria-labelledby="elektroDrop">
+    <!-- Mobile-only overview -->
+    <li class="d-xl-none"><a class="dropdown-item" href="izrada-elektro-instalacija.html">Sve o elektro instalacijama</a></li>
+    <li class="d-xl-none"><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="elektro-instalacije/izvodjenje-industrijska-elektro-instalacija.html">Industrijske elektro instalacije</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Stambene </a></li>
+              <li><a class="dropdown-item" href="elektro-instalacije/elektro-instalacije-za-stambene-objekte-stan-kuca.html">Stambene elektro instalacije</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Gromobrani</a></li>
+              <li><a class="dropdown-item" href="elektro-instalacije/gromobrani-ugradnja-i-dokumentacija-po-zakonu.html">Gromobrani</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Razvodni ormani</a></li>
+              <li><a class="dropdown-item" href="elektro-instalacije/elektro-razvodni-ormani.html">Razvodni elektro ormani</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Rasveta</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Antipanic</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Galanterija</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Podno grejanje</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Osigurači</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Uzemljenje</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Elektro energetika</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Priprema gradilišta</a></li>
+              <li><a class="dropdown-item" href="elektro-instalacije/priprema-gradilista.html">Priprema gradilišta</a></li>
             </ul>
           </li>
 
           <!-- X-ray skeneri -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="xrayDrop" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" href="protiv-pozarni-sistemi-oprema.html" id="xrayDrop" data-bs-toggle="dropdown" aria-expanded="false">
               Protiv požarni sistemi
             </a>
-            <ul class="dropdown-menu dropdown-menu-start" aria-labelledby="xrayDrop">
-              <li><a class="dropdown-item" href="#">Adresibilni dojavni sistemi</a></li>
+
+<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="xrayDrop">
+    <!-- Mobile-only overview -->
+    <li class="d-xl-none"><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema.html">Sve o Protiv požarnim sistemima</a></li>
+    <li class="d-xl-none"><hr class="dropdown-divider"></li>
+
+              <li><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema/adresibilni-dojavni-sistemi.html">Adresibilni dojavni sistemi</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Konvencionalni dojavni sistemi</a></li>
+              <li><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema/konvencionalni-dojavni-sistemi.html">Konvencionalni dojavni sistemi</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Centrale</a></li>
+              <li><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema/centrale.html">Centrale</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Detektori</a></li>
+              <li><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema/protiv-pozarni-detektori.html">Detektori</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">PP Aparati</a></li>
+              <li><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema/protiv-pozarni-pp-aparati.html">PP Aparati</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">CO Detekcija</a></li>
+              <li><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema/co-detekcija.html">CO Detekcija</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">PP Kablovi</a></li>
+              <li><a class="dropdown-item" href="protiv-pozarni-sistemi-oprema/protiv-pozarni-pp-kablovi.html">PP Kablovi</a></li>
             </ul>
           </li>
 
           <!-- Tehnička rešenja -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="resenjaDrop" data-bs-toggle="dropdown" aria-expanded="false">
-              Sistemska rešenja
+              Tehnička rešenja
             </a>
+
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="resenjaDrop">
-              <li><a class="dropdown-item" href="#">Termalne kamere</a></li>
+    <!-- Mobile-only overview -->
+    <li class="d-xl-none"><a class="dropdown-item" href="#">Sve o tehničkim rešenjima</a></li>
+    <li class="d-xl-none"><hr class="dropdown-divider"></li>
+
+              <li><a class="dropdown-item" href="tehnicka-resenja/konfiguracija-instalacija-projektovanje-odrzavanje-i-oprema-racunarske-mreze.html">Računarske mreže</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Računarske mreže</a></li>
+              <li><a class="dropdown-item" href="tehnicka-resenja/audio-video-interfon-sistemi-za-kucu-poslvni-prostor.html">Interfonski sistemi</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Interfonski sistemi</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Rampe i motori za kapije</a></li>
+              <li><a class="dropdown-item" href="tehnicka-resenja/parking-rampe-motori-za-automatske-klizne-krilne-kapije.html">Rampe i motori za kapije</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Projektovanje i izvođenje</a></li>
             </ul>
@@ -254,8 +262,8 @@
           <div class="pc-blur"></div>
           <div class="pc-meta d-flex flex-column justify-content-end">
             <div>
-              <h5 class="pc-name mb-1 text-white">Iznajmljivanje metal detektora</h5>
-              <p class="mb-3 text-white-75 small">X-Ray skeneri, skeneri sa zonama, rendgen skeneri za prtljag i ostala sigurnosna oprema.</p>
+              <h5 class="pc-name mb-1 text-white">Iznajmljivanje i prodaja metal detektorskih vrata</h5>
+              <p class="mb-3 text-white-75 small">Rendgen/X-Ray skeneri, ručni detektori metala i ostala sigurnosna oprema.</p>
               <div class="d-flex align-items-center justify-content-between">
                 <div class="d-flex gap-3 small text-white-75">
                   <button class="btn btn-outline-danger btn-sm rounded-pill fw-semibold px-3">
@@ -328,7 +336,7 @@
       <div class="col-lg-6">
         <div class="pe-lg-4">
           <!-- <h6 class="fw-semibold text-danger mb-2">Sigurno i jednostavno</h6> -->
-          <h2 class="fw-semibold display-6 text-dark mb-3">Iznajmljivanje i prodaja metal detektorskih vrata i uređaja za detekciju metala</h2>
+          <h2 class="fw-semibold display-6 text-dark mb-3">Iznajmljivanje i prodaja metal detektorskih vrata i metal detektora</h2>
           <p class="lead text-secondary mb-4">
             Naša firma nudi <strong>najnovije modele vrata metal detektora i ručnih uređaja za detekciju metala</strong>. Pored kupovine, omogućavamo i iznajmljivanje opreme – <strong class="accent">idealno rešenje za događaje, sajmove, koncerte i privremene projekte</strong>.
           </p>
@@ -378,7 +386,7 @@
         <span class="badge rounded-pill border border-2 border-white text-white bg-transparent px-4 py-2 fs-5 fw-semibold">Alarmni sistemi</span>
       </div><br>
       <h2 class="text-center">Najpouzdaniji sistem zaštite od provalnika</h2>
-      <p class="lead text-secondary text-center mb-3 white">Naši alarmni sistemi obezbeđuju najviši nivo sigurnosti za vaš dom ili poslovni prostor.</p>
+      <p class="lead text-secondary text-center mb-3 white">Naši alarmni sistemi obezbeđuju najviši nivo sigurnosti za vašu kuću ili poslovni prostor.</p>
 
       <div class="row g-4 mt-4">
         <div class="col-md-6">
