Webupdate-1 pages - start1

--- a/kamere-za-video-nadzor-ugradnja-i-oprema.html
+++ b/kamere-za-video-nadzor-ugradnja-i-oprema.html
@@ -55,8 +55,8 @@
       <div class="collapse navbar-collapse justify-content-lg-end" id="mainNav">
         <ul class="navbar-nav align-items-lg-center">
           <!-- Video nadzor -->
-          <li class="nav-item">
-            <a class="nav-link" href="kamere-za-video-nadzor-ugradnja-i-oprema.html">Video nadzor</a>
+          <li class="nav-item ">
+            <a class="nav-link active-nav-item" href="kamere-za-video-nadzor-ugradnja-i-oprema.html">Video nadzor</a>
           </li>
 
           <!-- Alarmni sistemi -->
@@ -256,129 +256,72 @@
   <!-- Demo content -->
   <main>
     <!-- Hero Section -->
-    <section class="hero w-100 position-relative overflow-hidden text-white">
+    <section class="hero-landing w-100 position-relative overflow-hidden text-white">
       <div class="container">
-        <div class="row align-items-center hero-inner px-3 mx-auto">
+        <div class="row align-items-center hero-inner-landing px-3 mx-auto">
           <!-- LEFT: BIG HEADLINE -->
-          <div class="col-12 col-lg-7">
+          <div class="col-12 col-lg-8">
             <!-- <div class="mb-3">
           <span class="badge rounded-pill border border-white text-light fw-semibold px-3 py-1" style="background-color: rgba(255, 255, 255, 0.5);">
             Nudimo
           </span>
         </div> -->
-            <h1 class="hero-title fw-bold mb-2 lh-1">
-              Rešite zakonsku obavezu <span class="accent">gromobrana.</span>
-            </h1>
+        <!-- Badge pill above headline -->
+<span class="mt-20 badge rounded-pill border border-danger text-danger fw-semibold px-3 py-1 mb-2 d-inline-block">
+  2500+ zadovoljnih korisnika
+</span>  
+            <h1 class=" fw-bold mb-2 lh-1 mt-20">Video nadzor – ugradnja, kamere, oprema i servis širom Srbije</span></h1><br>    
+            <h2 class="lead text-secondary mb-3 white">Kompletna rešenja iz oblasti video nadzora - <strong class="accent">od projektovanja i ugradnje do održavanja</strong>.
+<span class="underline">Sa više od 15 godina iskustva</span>, pružamo pouzdane i efikasne sisteme sigurnosti za stambene, poslovne i industrijske objekte.
+            </h2><br>  
+            <p class="lead text-secondary mb-3 white">Koristimo najnoviju tehnologiju: 4K kamere, termalne kamere, IP sisteme i naprednu video analitiku, kako bismo obezbedili <strong>maksimalnu zaštitu vašeg prostora</strong>.</p>  
+            <!-- stack on xs, row from sm and up -->
+            <div class="d-flex flex-column flex-sm-row gap-2 mt-50">
+  <a href="tel:+38162421515"
+     aria-label="Pozovite 062 42 15 15"
+     class="btn btn-light btn-md px-4 fw-semibold btn-cut-primary">
+    Pozovite nas <i class="bi bi-telephone-fill ms-1"></i>
+  </a>
+
+ <a href="#"
+   class="btn btn-outline-light btn-md px-4 fw-semibold hero-ghost btn-straight">
+  Zatražite besplatnu ponudu <i class="bi bi-arrow-right ms-1"></i>
+</a>
+</div>
+
           </div>
 
           <!-- RIGHT: BADGE + COPY + CTAs -->
-          <div class="col-12 col-lg-5 mt-3 mt-lg-0">
-            <p class="lead text-secondary mb-3 white">
-              <strong class="underline">Od izrade potrebne dokumentacije do kompletne montaže</strong>. Mi preuzimamo
-              ceo proces umesto vas - Sve rešavate na jednom mestu!!
-            </p>
-            <!-- stack on xs, row from sm and up -->
-            <div class="d-flex flex-column flex-sm-row gap-2">
-              <a href="tel:+38162421515" aria-label="Pozovite 062 42 15 15" class="btn btn-light btn-md px-3 fw-semibold rounded-pill btn-cut-primary">Pozovite nas <i
-                  class="bi bi-telephone-fill ms-1"></i></a>
-              <a href="#" class="btn btn-outline-light btn-md px-3 fw-semibold rounded-pill hero-ghost btn-straight">Saznajte više <i
-                  class="bi bi-arrow-right ms-1"></i></a>
-            </div>
+          <div class="col-12 col-lg-4 mt-3 mt-lg-0 text-center text-lg-end d-none d-lg-block">
+            <img src="assets/images/Video-nadzor–ugradnja-oprema-i-servis-beograd-novi-sad-srbija.png" class="img-fluid" alt="Video nadzor ilustracija">
           </div>
         </div>
       </div>
     </section>
-
-
-    <div class="clearfix"></div>
-    <!-- 3 Cards Section (overlap hero) -->
-    <section class="cards-overlap position-relative">
-      <div class="scroll-indicator d-sm-none" title="Skrolujte za više">
-        <i class="bi bi-chevron-compact-down"></i>
-        <span class="visually-hidden">Skrolujte za više sadržaja</span>
-      </div>
-      <div class="container">
-        <div class="row gap-4 justify-content-center">
-
-          <!-- Card 1 -->
-          <div class="col-12 col-sm-12 col-lg-3">
-            <div class="profile-card shadow-lg h-100">
-              <img class="pc-img" src="assets/images/Product_ColorVu.jpg" alt="Video nadzor">
-              <div class="pc-blur"></div>
-              <div class="pc-meta d-flex flex-column justify-content-end">
-                <div>
-                  <h5 class="pc-name mb-1 text-white">Kompletna rešenja za video nadzor</h5>
-                  <p class="mb-3 text-white-75 small">Najmodernije kamere i oprema, sa FullHD, 2K, 3K i 4K snimcima.
-                  </p>
-                  <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex gap-3 small text-white-75">
-                      <button class="btn btn-outline-danger btn-sm rounded-pill fw-semibold px-3">
-                        Pogledajte ponudu <i class="bi bi-plus-lg ms-1"></i>
-                      </button>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Card 2 -->
-          <div class="col-12 col-sm-12 col-lg-3">
-            <div class="profile-card shadow-lg h-100">
-              <img class="pc-img" src="assets/images/metel-detektor-vrata.png" alt="Iznajmljivanje metal detektora">
-              <div class="pc-blur"></div>
-              <div class="pc-meta d-flex flex-column justify-content-end">
-                <div>
-                  <h5 class="pc-name mb-1 text-white">Iznajmljivanje i prodaja metal detektorskih vrata</h5>
-                  <p class="mb-3 text-white-75 small">Rendgen/X-Ray skeneri, ručni detektori metala i ostala sigurnosna
-                    oprema.</p>
-                  <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex gap-3 small text-white-75">
-                      <button class="btn btn-outline-danger btn-sm rounded-pill fw-semibold px-3">
-                        Pogledajte ponudu <i class="bi bi-plus-lg ms-1"></i>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Card 3 -->
-          <div class="col-12 col-sm-12 col-lg-3">
-            <div class="profile-card shadow-lg h-100">
-              <img class="pc-img" src="assets/images/elektro-instalacije-beograd-novi-sad-maximus-security.jpg"
-                alt="Elektro instalacije">
-              <div class="pc-blur"></div>
-              <div class="pc-meta d-flex flex-column justify-content-end">
-                <div>
-                  <h5 class="pc-name mb-1 text-white">Elektro instalacije</h5>
-                  <p class="mb-3 text-white-75 small">Profesionalna i sigurna ugradnja svih elektro sistema.</p>
-                  <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex gap-3 small text-white-75">
-                      <button class="btn btn-outline-danger btn-sm rounded-pill fw-semibold px-3">
-                        Pogledajte ponudu <i class="bi bi-plus-lg ms-1"></i>
-                      </button>
-                      <!-- <span class="d-inline-flex align-items-center gap-1"><i class="bi bi-people"></i> 402</span>
-                  <span class="d-inline-flex align-items-center gap-1"><i class="bi bi-heart"></i> 73</span> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section>
-    <br><br>
-    </section>
-
     <!-- Reference -->
     <section class="text-light py-5 reference-section">
       <div class="container">
-        <h3 class="text-center">Poverenje nam je ukazalo preko 2500 porodičnih,<br> malih i srednjih preduzeća</h3>
+        <!-- Google Review Rating Section -->
+<div class="text-center mt-3">
+  <div class="d-inline-flex align-items-center gap-2 bg-dark rounded-pill px-4 py-2">
+    <span class="fs-5 fw-bold text-warning">4.9</span>
+    <span class="text-warning">
+      <i class="bi bi-star-fill"></i>
+      <i class="bi bi-star-fill"></i>
+      <i class="bi bi-star-fill"></i>
+      <i class="bi bi-star-fill"></i>
+      <i class="bi bi-star-fill"></i>
+    </span>
+    <a href="https://www.google.com/search?sca_esv=6ddd0cbd40df43d1&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-EyUfie8XB2mUGoCdSm3U0mUKMCRDyIhFTVqygii4mG6Cnxrr5o-BQhnWS8Z-NOy9kCWKaQLnA47vVn3Dx8sldTYUkabqBJZfik9mn2Mh4TjPdp-3xMsOh-r04plO_5Gp9Ccxr-A%3D&q=Maximus+Global+Tehnology+doo+%D0%A0%D0%B5%D1%86%D0%B5%D0%BD%D0%B7%D0%B8%D1%98%D0%B5&sa=X&ved=2ahUKEwito46hqsSQAxWM1gIHHQThGnwQ0bkNegQIOxAE&biw=1997&bih=1019&dpr=1.25" 
+       class="text-light fs-8 text-decoration-none fw-semibold ms-2" 
+       target="_blank" 
+       rel="noopener">
+      Google recenzija
+      <i class="bi bi-box-arrow-up-right ms-1"></i>
+    </a>
+  </div>
+</div>
+        <h3 class="text-center mt-20">Poverenje nam je ukazalo preko 2500 porodičnih,<br> malih i srednjih preduzeća</h3>
         <br><br>
         <div class="slider">
           <div class="logos d-flex">
@@ -398,6 +341,86 @@
         </div>
       </div>
     </section>
+
+  <section class="text-light bg-light section-breathe">
+  <div class="container px-3 px-lg-4">
+    <h2 class="fw-semibold display-6 text-center mb-5 text-black">
+      Kamere za video nadzor u našoj ponudi
+    </h2>
+
+    <div class="row g-5">
+      <!-- HIKVISION -->
+      <div class="col-lg-6 d-flex">
+        <div
+          class="camera-card dark-card rounded-4 overflow-hidden position-relative h-100"
+          style="background-image: url('assets/images/hikvision-kamere-Video-nadzor-ugradnja-oprema-i-servis-beograd-novi-sad-srbija-crevno-plava.png');"
+        >
+          <div class="camera-content p-4 p-lg-5">
+            <!-- HEADER: stays aligned across cards -->
+            <div class="camera-header">
+              <img src="assets/images/2560px-Hikvision_logo.png" alt="Hikvision logo" class="camera-logo">
+              <h3 class="fw-semibold text-white mt-3 mb-0">Hikvision kamere</h3>
+            </div>
+
+            <!-- BODY: variable length text, won’t move header -->
+            <div class="camera-body text-light opacity-75">
+              <p class="mb-3">
+                Hikvision kamere spadaju među <strong>najkvalitetnije uređaje za video nadzor</strong> na tržištu.
+              </p>
+              <p class="mb-3">
+                Opcija prikaza u boji noću pruža dodatnu sigurnost i preciznost u identifikaciji lica i vozila.
+              </p>
+              <p class="mb-3">
+                Zahvaljujući <strong>naprednim senzorima i algoritmima obrade slike</strong>, omogućavaju kristalno jasan prikaz
+                čak i u uslovima slabog osvetljenja.
+              </p>
+              <p class="mb-0">
+                Hikvision sistemi nude funkcije poput <strong>detekcije pokreta</strong>, <strong>prepoznavanja lica</strong> i
+                <strong>analize video zapisa</strong>.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- DAHUA -->
+      <div class="col-lg-6 d-flex">
+        <div
+  class="camera-card dark-card rounded-4 overflow-hidden position-relative h-100"
+  style="background-image: url('assets/images/dahua-kamere-Video-nadzor-ugradnja-oprema-i-servis-beograd-novi-sad-srbija.png');"
+>
+          <div class="camera-content p-4 p-lg-5">
+            <!-- HEADER: stays aligned across cards -->
+            <div class="camera-header">
+              <img src="assets/images/Dahua_Technology-logo.svg" alt="Dahua logo" class="camera-logo">  
+              <h3 class="fw-semibold text-white mt-3 mb-0">Dahua Technology kamere</h3>
+            </div>
+
+            <!-- BODY -->
+            <div class="camera-body text-light opacity-75">
+              <p class="mb-3">
+                <strong>Dahua Technology</strong> je svetski lider u oblasti <strong>video nadzora i bezbednosnih sistema</strong>.
+              </p>
+              <p class="mb-3">
+                Zahvaljujući <strong>AI tehnologiji</strong>, Dahua sistemi omogućavaju prepoznavanje lica, detekciju pokreta,
+                brojanje osoba i pametne alarme.
+              </p>
+              <p class="mb-0">
+                Opremljene su <strong>modernim senzorima i infracrvenim osvetljenjem</strong>, što garantuje jasnu i detaljnu sliku
+                danju i noću.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div><!-- /row -->
+  </div>
+</section>
+
+
+
+
 
 
     <section class="text-dark bg-light section-breathe">
@@ -451,70 +474,7 @@
         </div>
       </div>
     </section>
-  </main>
-
-  <!-- Alarmni sistemi sekcija -->
-  <section class="alarmni-bg">
-    <div class="container">
-      <div class="col-md-12 section-breathe">
-        <div class="d-flex justify-content-center mb-3">
-          <span
-            class="badge rounded-pill border border-2 border-white text-white bg-transparent px-4 py-2 fs-5 fw-semibold">Alarmni
-            sistemi</span>
-        </div><br>
-        <h2 class="text-center">Najpouzdaniji sistem zaštite od provalnika</h2>
-        <p class="lead text-secondary text-center mb-3 white">Naši alarmni sistemi obezbeđuju najviši nivo sigurnosti za
-          vašu kuću ili poslovni prostor.</p>
-
-        <div class="row g-4 mt-4">
-          <div class="col-md-6">
-            <div class="row g-3 align-items-start">
-              <div class="col-auto">
-                <span
-                  class="d-inline-flex align-items-center justify-content-center bg-danger text-white rounded-circle"
-                  style="width:48px;height:48px;">
-                  <i class="bi bi-shield-lock fs-5"></i>
-                </span>
-              </div>
-              <div class="col">
-                <p class="mb-0 text-secondary">
-                  Bilo da tražite jednostavan bežični set ili napredan integrisani sistem sa video nadzorom, kod nas
-                  dobijate najsigurnije i najpouzdanije rešenje na tržištu.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="row g-3 align-items-start">
-              <div class="col-auto">
-                <span
-                  class="d-inline-flex align-items-center justify-content-center bg-danger text-white rounded-circle"
-                  style="width:48px;height:48px;">
-                  <i class="bi bi-camera-video fs-5"></i>
-                </span>
-              </div>
-              <div class="col">
-                <p class="mb-0 text-secondary">
-                  U ponudi imamo proverena rešenja renomiranih proizvođača kao što su Paradox i Hikvision – lideri u
-                  oblasti zaštite. Paradox je poznat po izuzetnoj pouzdanosti centralnih jedinica, dok Hikvision
-                  kombinuje alarmne i video sisteme u jedinstvenoj, vrhunskoj zaštiti.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center my-4">
-          <div class="col-12 col-md-10 col-lg-8 text-center">
-            <!-- Replace the src with your image path -->
-            <img src="assets/images/alarmni-sistemi.png" alt="Alarmni sistem" class="img-fluid rounded-3 shadow-sm"
-              loading="lazy">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Alarmni sistemi sekcija -->
+    
 
 
   <div class="clearfix"></div>
