--- a/kamere-za-video-nadzor-ugradnja-i-oprema.html
+++ b/kamere-za-video-nadzor-ugradnja-i-oprema.html
@@ -270,11 +270,11 @@
 <span class="mt-20 badge rounded-pill border border-danger text-danger fw-semibold px-3 py-1 mb-2 d-inline-block">
   2500+ zadovoljnih korisnika
 </span>  
-            <h1 class=" fw-bold mb-2 lh-1 mt-20">Video nadzor – ugradnja, kamere, oprema i servis širom Srbije</span></h1><br>    
+            <h1 class=" fw-bold mb-2 lh-1 mt-20">Video nadzor <br><span class="h1-below">ugradnja, kamere, oprema i servis </span></h1><br>    
             <h2 class="lead text-secondary mb-3 white">Kompletna rešenja iz oblasti video nadzora - <strong class="accent">od projektovanja i ugradnje do održavanja</strong>.
 <span class="underline">Sa više od 15 godina iskustva</span>, pružamo pouzdane i efikasne sisteme sigurnosti za stambene, poslovne i industrijske objekte.
-            </h2><br>  
-            <p class="lead text-secondary mb-3 white">Koristimo najnoviju tehnologiju: 4K kamere, termalne kamere, IP sisteme i naprednu video analitiku, kako bismo obezbedili <strong>maksimalnu zaštitu vašeg prostora</strong>.</p>  
+            </h2>
+           
             <!-- stack on xs, row from sm and up -->
             <div class="d-flex flex-column flex-sm-row gap-2 mt-50">
   <a href="tel:+38162421515"
@@ -299,29 +299,35 @@
       </div>
     </section>
     <!-- Reference -->
-    <section class="text-light py-5 reference-section">
+    <section class="text-light py-5 pt-0 reference-section">
       <div class="container">
         <!-- Google Review Rating Section -->
 <div class="text-center mt-3">
-  <div class="d-inline-flex align-items-center gap-2 bg-dark rounded-pill px-4 py-2">
-    <span class="fs-5 fw-bold text-warning">4.9</span>
-    <span class="text-warning">
-      <i class="bi bi-star-fill"></i>
-      <i class="bi bi-star-fill"></i>
-      <i class="bi bi-star-fill"></i>
-      <i class="bi bi-star-fill"></i>
-      <i class="bi bi-star-fill"></i>
-    </span>
-    <a href="https://www.google.com/search?sca_esv=6ddd0cbd40df43d1&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-EyUfie8XB2mUGoCdSm3U0mUKMCRDyIhFTVqygii4mG6Cnxrr5o-BQhnWS8Z-NOy9kCWKaQLnA47vVn3Dx8sldTYUkabqBJZfik9mn2Mh4TjPdp-3xMsOh-r04plO_5Gp9Ccxr-A%3D&q=Maximus+Global+Tehnology+doo+%D0%A0%D0%B5%D1%86%D0%B5%D0%BD%D0%B7%D0%B8%D1%98%D0%B5&sa=X&ved=2ahUKEwito46hqsSQAxWM1gIHHQThGnwQ0bkNegQIOxAE&biw=1997&bih=1019&dpr=1.25" 
-       class="text-light fs-8 text-decoration-none fw-semibold ms-2" 
-       target="_blank" 
-       rel="noopener">
-      Google recenzija
-      <i class="bi bi-box-arrow-up-right ms-1"></i>
-    </a>
+  <div class="google-review d-inline-flex flex-wrap align-items-center justify-content-center gap-2 bg-dark rounded-pill px-4 py-2">
+    <div class="rating d-flex align-items-center gap-2">
+      <span class="fs-5 fw-bold text-warning">4.9</span>
+      <span class="text-warning">
+        <i class="bi bi-star-fill"></i>
+        <i class="bi bi-star-fill"></i>
+        <i class="bi bi-star-fill"></i>
+        <i class="bi bi-star-fill"></i>
+        <i class="bi bi-star-fill"></i>
+      </span>
+    </div>
+
+    <div class="review-link">
+      <a href="https://www.google.com/search?sca_esv=6ddd0cbd40df43d1&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-EyUfie8XB2mUGoCdSm3U0mUKMCRDyIhFTVqygii4mG6Cnxrr5o-BQhnWS8Z-NOy9kCWKaQLnA47vVn3Dx8sldTYUkabqBJZfik9mn2Mh4TjPdp-3xMsOh-r04plO_5Gp9Ccxr-A%3D&q=Maximus+Global+Tehnology+doo+%D0%A0%D0%B5%D1%86%D0%B5%D0%BD%D0%B7%D0%B8%D1%98%D0%B5&sa=X&ved=2ahUKEwito46hqsSQAxWM1gIHHQThGnwQ0bkNegQIOxAE&biw=1997&bih=1019&dpr=1.25"
+         class="text-light fs-8 text-decoration-none fw-semibold"
+         target="_blank"
+         rel="noopener">
+        Google recenzija
+        <i class="bi bi-box-arrow-up-right ms-1"></i>
+      </a>
+    </div>
   </div>
 </div>
-        <h3 class="text-center mt-20">Poverenje nam je ukazalo preko 2500 porodičnih,<br> malih i srednjih preduzeća</h3>
+
+        <h3 class="text-center mt-50">Poverenje nam je ukazalo preko 2500 porodičnih,<br> malih i srednjih preduzeća</h3>
         <br><br>
         <div class="slider">
           <div class="logos d-flex">
