video nadzor stranica 1

--- a/kamere-za-video-nadzor-ugradnja-i-oprema.html
+++ b/kamere-za-video-nadzor-ugradnja-i-oprema.html
@@ -371,18 +371,10 @@
             <!-- BODY: variable length text, won’t move header -->
             <div class="camera-body text-light opacity-75">
               <p class="mb-3">
-                Hikvision kamere spadaju među <strong>najkvalitetnije uređaje za video nadzor</strong> na tržištu.
+                Hikvision IP kamere sa 4K Ultra HD rezolucijom, ColorVu tehnologijom za noćni prikaz u boji i AI funkcijama za detekciju lica i pokreta. 
               </p>
               <p class="mb-3">
-                Opcija prikaza u boji noću pruža dodatnu sigurnost i preciznost u identifikaciji lica i vozila.
-              </p>
-              <p class="mb-3">
-                Zahvaljujući <strong>naprednim senzorima i algoritmima obrade slike</strong>, omogućavaju kristalno jasan prikaz
-                čak i u uslovima slabog osvetljenja.
-              </p>
-              <p class="mb-0">
-                Hikvision sistemi nude funkcije poput <strong>detekcije pokreta</strong>, <strong>prepoznavanja lica</strong> i
-                <strong>analize video zapisa</strong>.
+                Uz vodootporno kućište, PoE napajanje i H.265 kompresiju, obezbeđuju izuzetno oštru sliku, napredne mogućnosti i pouzdan rad u svim uslovima. 
               </p>
             </div>
           </div>
@@ -405,15 +397,10 @@
             <!-- BODY -->
             <div class="camera-body text-light opacity-75">
               <p class="mb-3">
-                <strong>Dahua Technology</strong> je svetski lider u oblasti <strong>video nadzora i bezbednosnih sistema</strong>.
+                <strong>Dahua Technology</strong> globalni lider u oblasti video nadzora i bezbednosnih sistema. Zahvaljujući AI tehnologiji, omogućavaju prepoznavanje lica, detekciju pokreta, brojanje osoba i pametne alarme. Opremljene su naprednim senzorima i infracrvenim osvetljenjem, pružajući jasnu i detaljnu sliku danju i noću.
               </p>
               <p class="mb-3">
-                Zahvaljujući <strong>AI tehnologiji</strong>, Dahua sistemi omogućavaju prepoznavanje lica, detekciju pokreta,
-                brojanje osoba i pametne alarme.
-              </p>
-              <p class="mb-0">
-                Opremljene su <strong>modernim senzorima i infracrvenim osvetljenjem</strong>, što garantuje jasnu i detaljnu sliku
-                danju i noću.
+                Dahua nudi širok asortiman rešenja - od IP i HDCVI kamera, PTZ i termalnih sistema, do kontrole pristupa, video interfona i alarmnih uređaja, sa lakoćom integracije sa drugim sistemima.
               </p>
             </div>
           </div>
